@@ -1,4 +1,5 @@
 Verion 0.9.43dev (?? ??? 2003)
+  - In day "view", table columns had wrong width setting
   - In year view, show days with events in bold.  Must enable new
     setting in System Settings since this is CPU-intensive.
   - Fixed bug 877797: edit_user.php would show form for changing password
